ram optimize, api clear to delete, runtime series
