# docs/swagger.json
@@ -311,7 +311,7 @@
             }
         },
         "/api/config/clear": {
-            "get": {
+            "delete": {
                 "description": "Clears the configuration and sets some examples",
                 "consumes": [
                     "application/json"
@@ -548,7 +548,7 @@
             }
         },
         "/api/db/clear/{name}": {
-            "get": {
+            "delete": {
                 "description": "Clears a DB Table",
                 "consumes": [
                     "application/json"
@@ -610,6 +610,51 @@
                         "type": "string",
                         "description": "apikey",
                         "name": "apikey",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/db/oldjobs": {
+            "delete": {
+                "description": "Removes Jobs started over x days ago from db",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "database"
+                ],
+                "summary": "Clean Old Jobs",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "apikey",
+                        "name": "apikey",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Days ago",
+                        "name": "days",
                         "in": "query",
                         "required": true
                     }
